// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Guide renders component 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="157f0ecf-69e6-4007-a27c-d6f35de92565"
      >
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Solving Problems badge"
          src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="medium tab tabActive"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/badges/0d29bdb5-b502-4036-a790-9479d588e8fb_medium"
          />
          <br />
          Delivering Results
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/badges/16cd30cc-3d5c-4c7e-b13f-828853034334_medium"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/badges/bf796c03-a863-4f61-9a1a-1f4fe6e408e8_medium"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
          />
          <br />
          Influencing People
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Solving Problems
      </h2>
      At the top level, Solving Problems (O) concerns how someone thinks about work problems, projects and challenges, how receptive they are to new or different information or approaches, and the way this influences their decision making.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Open-Minded/Pragmatic People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              Tell me how you would go about solving a work problem you have not encountered before.
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Do they talk about a number of different ways of approaching the problem?
              </li>
              <li>
                Are their ideas new, original or different in any way?
              </li>
              <li>
                Do they test new ideas against what seems feasible, both now and in the longer term? Producing new ideas but checking their viability, and implementing balanced and timely solutions, are all aspects of the open-minded/pragmatic character.
              </li>
              <li>
                And to probe into possible issues with being open-minded/pragmatic.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you like to think about new ideas and possibilities). Give me an example of a time when you had to be practical and realistic, and work to a fixed set of rules.
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you are a grounded person but also someone who thinks about future possibilities.) Can you describe a work situation where you realized that you hadn't learned from a similar situation in the past. What happened and what did you do?
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide renders nothing if guide not ready 1`] = `null`;

exports[`Guide renders nothing if no competencies 1`] = `null`;

exports[`Guide renders nothing if results not ready 1`] = `null`;

exports[`Guide toggles expanded intro 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="157f0ecf-69e6-4007-a27c-d6f35de92565"
      >
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Solving Problems badge"
          src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="medium tab tabActive"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/badges/0d29bdb5-b502-4036-a790-9479d588e8fb_medium"
          />
          <br />
          Delivering Results
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/badges/16cd30cc-3d5c-4c7e-b13f-828853034334_medium"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/badges/bf796c03-a863-4f61-9a1a-1f4fe6e408e8_medium"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
          />
          <br />
          Influencing People
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Solving Problems
      </h2>
      At the top level, Solving Problems (O) concerns how someone thinks about work problems, projects and challenges, how receptive they are to new or different information or approaches, and the way this influences their decision making.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <p>
        The benefits of being open-minded are likely to include approaching problems in original ways, making quick connections, pushing boundaries, seeing the bigger picture, and not getting stuck in the detail.
In contrast someone who is pragmatic likes to solve problems in practical ways, and prefers tried-andtested solutions or established rules and regulations.
They are likely to have a fine eye for detail, be results oriented, and able to bring experience to bear on a problem.
Those who are a mixture of both (openminded/pragmatic) are best described as approaching problems in a systematic way, being able to flex between different options, capable of seeing situations at different levels of detail, and as bringing healthy caution to decision making.
These personality characteristics provide the basis for asking a particular sequence of questions of each of the personality 'types'.
The first question is looking to confirm what they should be like; the second two explore areas of possible concern.
      </p>
      <hr />
      <div>
        <h2>
          Open-Minded/Pragmatic People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              Tell me how you would go about solving a work problem you have not encountered before.
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Do they talk about a number of different ways of approaching the problem?
              </li>
              <li>
                Are their ideas new, original or different in any way?
              </li>
              <li>
                Do they test new ideas against what seems feasible, both now and in the longer term? Producing new ideas but checking their viability, and implementing balanced and timely solutions, are all aspects of the open-minded/pragmatic character.
              </li>
              <li>
                And to probe into possible issues with being open-minded/pragmatic.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you like to think about new ideas and possibilities). Give me an example of a time when you had to be practical and realistic, and work to a fixed set of rules.
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you are a grounded person but also someone who thinks about future possibilities.) Can you describe a work situation where you realized that you hadn't learned from a similar situation in the past. What happened and what did you do?
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide update sets the guide data if the guide's assessment ID changes 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="157f0ecf-69e6-4007-a27c-d6f35de92565"
      >
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Updated Name
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Updated Name badge"
          src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="medium tab tabActive"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Updated Name badge"
            src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
          />
          <br />
          Updated Name
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/badges/0d29bdb5-b502-4036-a790-9479d588e8fb_medium"
          />
          <br />
          Delivering Results
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/badges/16cd30cc-3d5c-4c7e-b13f-828853034334_medium"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/badges/bf796c03-a863-4f61-9a1a-1f4fe6e408e8_medium"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
          />
          <br />
          Influencing People
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Updated Name
      </h2>
      At the top level, Solving Problems (O) concerns how someone thinks about work problems, projects and challenges, how receptive they are to new or different information or approaches, and the way this influences their decision making.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Open-Minded/Pragmatic People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              Tell me how you would go about solving a work problem you have not encountered before.
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Do they talk about a number of different ways of approaching the problem?
              </li>
              <li>
                Are their ideas new, original or different in any way?
              </li>
              <li>
                Do they test new ideas against what seems feasible, both now and in the longer term? Producing new ideas but checking their viability, and implementing balanced and timely solutions, are all aspects of the open-minded/pragmatic character.
              </li>
              <li>
                And to probe into possible issues with being open-minded/pragmatic.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you like to think about new ideas and possibilities). Give me an example of a time when you had to be practical and realistic, and work to a fixed set of rules.
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you are a grounded person but also someone who thinks about future possibilities.) Can you describe a work situation where you realized that you hadn't learned from a similar situation in the past. What happened and what did you do?
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide update sets the guide data if the guide's locale changes 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="157f0ecf-69e6-4007-a27c-d6f35de92565"
      >
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Updated Name
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Solving Problems badge"
          src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="medium tab tabActive"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Updated Name badge"
            src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
          />
          <br />
          Updated Name
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/badges/0d29bdb5-b502-4036-a790-9479d588e8fb_medium"
          />
          <br />
          Delivering Results
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/badges/16cd30cc-3d5c-4c7e-b13f-828853034334_medium"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/badges/bf796c03-a863-4f61-9a1a-1f4fe6e408e8_medium"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
          />
          <br />
          Influencing People
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Solving Problems
      </h2>
      At the top level, Solving Problems (O) concerns how someone thinks about work problems, projects and challenges, how receptive they are to new or different information or approaches, and the way this influences their decision making.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Open-Minded/Pragmatic People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              Tell me how you would go about solving a work problem you have not encountered before.
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Do they talk about a number of different ways of approaching the problem?
              </li>
              <li>
                Are their ideas new, original or different in any way?
              </li>
              <li>
                Do they test new ideas against what seems feasible, both now and in the longer term? Producing new ideas but checking their viability, and implementing balanced and timely solutions, are all aspects of the open-minded/pragmatic character.
              </li>
              <li>
                And to probe into possible issues with being open-minded/pragmatic.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you like to think about new ideas and possibilities). Give me an example of a time when you had to be practical and realistic, and work to a fixed set of rules.
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you are a grounded person but also someone who thinks about future possibilities.) Can you describe a work situation where you realized that you hadn't learned from a similar situation in the past. What happened and what did you do?
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Guide update sets the guide data if the guide's removed 1`] = `null`;

exports[`Guide updates activeCompetency 1`] = `
<div
  className="tabsContainer"
>
  <div
    className="tabContainer"
  >
    <div
      className="competencySelect"
    >
      <select
        className="mobileSelect"
        onChange={[Function]}
        value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
      >
        <option
          value="157f0ecf-69e6-4007-a27c-d6f35de92565"
        >
          Solving Problems
        </option>
        <option
          value="a00c6b05-f9c5-4cc8-987f-80f6c5492f92"
        >
          Delivering Results
        </option>
        <option
          value="26314abe-d7c2-4ad2-af7c-3919c2a1c4e7"
        >
          Managing Pressure
        </option>
        <option
          value="5064521c-1028-40d4-8baa-dfeff734406f"
        >
          Engaging with People
        </option>
        <option
          value="b20ac1cb-9a1f-4fa5-abde-117974267c34"
        >
          Influencing People
        </option>
      </select>
      <p
        className="mobileBadge"
      >
        <img
          alt="Delivering Results badge"
          src="https://cdn.traitify.com/badges/0d29bdb5-b502-4036-a790-9479d588e8fb_medium"
        />
      </p>
    </div>
    <ul
      className="tabs"
    >
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Solving Problems badge"
            src="https://cdn.traitify.com/badges/216e23f2-f27c-46ae-b4b1-00c97a01db22_medium"
          />
          <br />
          Solving Problems
        </button>
      </li>
      <li
        className="medium tab tabActive"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Delivering Results badge"
            src="https://cdn.traitify.com/badges/0d29bdb5-b502-4036-a790-9479d588e8fb_medium"
          />
          <br />
          Delivering Results
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Managing Pressure badge"
            src="https://cdn.traitify.com/badges/16cd30cc-3d5c-4c7e-b13f-828853034334_medium"
          />
          <br />
          Managing Pressure
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Engaging with People badge"
            src="https://cdn.traitify.com/badges/bf796c03-a863-4f61-9a1a-1f4fe6e408e8_medium"
          />
          <br />
          Engaging with People
        </button>
      </li>
      <li
        className="medium tab"
      >
        <button
          onClick={[Function]}
          type="button"
        >
          <img
            alt="Influencing People badge"
            src="https://cdn.traitify.com/badges/96dbf653-6ea0-4dc0-94dc-f6db3247510c_medium"
          />
          <br />
          Influencing People
        </button>
      </li>
    </ul>
  </div>
  <div
    className="tabsContent"
  >
    <div
      className="tabContentActive"
    >
      <h2>
        Delivering Results
      </h2>
      At the top level, Delivering Results (C) concerns work style and how someone directs their efforts and attention toward completing tasks.
      <p>
        <button
          onClick={[Function]}
          type="button"
        >
          read_more
        </button>
      </p>
      <hr />
      <div>
        <h2>
          Flexible People
        </h2>
        <p>
          guide_intro
        </p>
        <div
          className="question"
        >
          <h3
            id="traitify-question-1"
          >
            Question 1
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              Describe an occasion at work where you needed to react very swiftly to a rapidly moving situation.
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-up\\" class=\\"svg-inline--fa fa-chevron-up fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M240.971 130.524l194.343 194.343c9.373 9.373 9.373 24.569 0 33.941l-22.667 22.667c-9.357 9.357-24.522 9.375-33.901.04L224 227.495 69.255 381.516c-9.379 9.335-24.544 9.317-33.901-.04l-22.667-22.667c-9.373-9.373-9.373-24.569 0-33.941L207.03 130.525c9.372-9.373 24.568-9.373 33.941-.001z\\"></path></svg>",
                }
              }
            />
          </button>
          <h4>
            question_purpose
          </h4>
          <div>
            <ul>
              <li>
                Are they able to adapt to situations?
              </li>
              <li>
                Can they change direction of thought (and travel) quickly?
              </li>
              <li>
                Are they able to suspend the need for a plan in order to achieve a rapid solution to a problem?
              </li>
              <li>
                Being able to use a variety of different approaches, pivot and change priorities, and react in 'real time' are all aspects of a flexible character.
              </li>
              <li>
                And to probe into possible issues with being flexible.
              </li>
            </ul>
          </div>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 2
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you are someone who likes to 'do their own thing'.) Describe a work situation where you needed to work closely to someone else's plan.
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
        <div
          className="question"
        >
          <h3
            id={null}
          >
            Question 3
          </h3>
          <button
            onClick={[Function]}
            type="button"
          >
            <span
              className="questionText"
            >
              (Your results suggest you tend to avoid work activities you consider unnecessary, repetitive or unpleasant.) Can you describe a time at work when in order to produce your best work you needed to perform a task in a slow and very detailed way?
            </span>
            <span
              className="questionIcon"
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<svg aria-hidden=\\"true\\" focusable=\\"false\\" data-prefix=\\"fas\\" data-icon=\\"chevron-down\\" class=\\"svg-inline--fa fa-chevron-down fa-w-14\\" role=\\"img\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 448 512\\"><path fill=\\"currentColor\\" d=\\"M207.029 381.476L12.686 187.132c-9.373-9.373-9.373-24.569 0-33.941l22.667-22.667c9.357-9.357 24.522-9.375 33.901-.04L224 284.505l154.745-154.021c9.379-9.335 24.544-9.317 33.901.04l22.667 22.667c9.373 9.373 9.373 24.569 0 33.941L240.971 381.476c-9.373 9.372-24.569 9.372-33.942 0z\\"></path></svg>",
                }
              }
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
